java-plugin/src/test/cases/error/ReturnAssignment3-13-16.java
import io.github.miracelwhipp.constness.annotation.Const;
import io.github.miracelwhipp.constness.annotation.PreservesConst;


class ReturnAssignment {

    @Const
    private Object object;

    @PreservesConst
    public Object getObject() {

        return object; // compile error
    }

}